--- a/css/index.css
+++ b/css/index.css
@@ -28,7 +28,7 @@ body {
 }
 
 div {
-    flex-wrap: nowrap;
+    /* flex-wrap: nowrap; */
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -97,6 +97,9 @@ div {
 .stu_con {
     flex: 1;
     padding: 10px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .stu:hover,
@@ -113,6 +116,9 @@ div {
     color: transparent;
     transition: all .7s linear;
     transition: 1s;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 /* 灰色不可选 */
